z-index prob fix

--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -74,7 +74,8 @@ body{ background: $bgColor; font-family: $fontFamily }
     align-items: center;
     border: 6px solid $bgColor;
     position: relative;
-    top: -30px
+    top: -30px;
+    z-index: 2;
   }
   .btn-back{ font-size: 20px; }
   .btn-back:before,
